VAN-12921 fixed chart axis and cell overlapping

--- a/vtr-ui/src/app/components/modal/modal-smart-stand-by/modal-smart-stand-by.component.scss
+++ b/vtr-ui/src/app/components/modal/modal-smart-stand-by/modal-smart-stand-by.component.scss
@@ -9,21 +9,22 @@
 		font-size: 3rem;
 		color: $main;
 	}
-	.tittle{
+	.tittle {
 		font-weight: $weight_600;
 		letter-spacing: 0;
-		color: #34495E;
+		color: #34495e;
 		opacity: 1;
 		font-size: 1.8rem;
 	}
-	.sub-tittle, .note{
+	.sub-tittle,
+	.note {
 		letter-spacing: 0;
 		color: #667481;
 		opacity: 1;
 		font-size: 1.4rem;
 	}
-	.note{
-		color: #DB221F;
+	.note {
+		color: #db221f;
 	}
 	.close-button {
 		background: $gradient_main;
@@ -36,15 +37,23 @@
 		font-weight: $weight_bold;
 	}
 	.legends-row {
-		max-width: 93.5%;
-		.graph-legend{
+		// max-width: 93.5%;
+		font-size: 1.2rem;
+		.graph-legend {
 			display: block;
-			border: 0.1rem solid $dark;
 			width: 0.6rem;
-            height: 1.2rem;
-			margin-top: 0.2rem;
+			// height: 1.2rem;
+			// margin-top: 0.2rem;
 			border-width: thin;
+		}
+		.legends-box{
+			border: 0.1rem solid $dark;
 		}
 	}
 
+	.activity-chart {
+		font-family: "Segoe UI", sans-serif;
+		font-size: 10px;
+		letter-spacing: 0.35px;
+	}
 }
